# haematite

./: .gitignore  Cargo.toml  README.md  VISION.md  clippy.toml
.github/workflows/: ci.yml
.meridian/: .resource-manifest.json
.meridian/workflows/stacked-dev/: README.md  brief-dev.aion  dispatch.aion  gate.aion  gleam.toml  manifest.toml  stacked-dev.aion  workflow.toml
.meridian/workflows/stacked-dev/schemas/: brief_dev_input.json  brief_dev_output.json  dispatch_input.json  dispatch_output.json  gate_input.json  gate_output.json  input.json  output.json
.meridian/workflows/stacked-dev/scripts/: check-schema-drift.sh
.meridian/workflows/stacked-dev/src/: aion_stacked_dev_io.gleam  brief_dev.gleam  dispatch.gleam  gate.gleam  stacked_dev.gleam  stacked_dev_cli_ffi.erl  stacked_dev_file_ffi.erl
.meridian/workflows/stacked-dev/test/: aion_stacked_dev_test.gleam  brief_codecs_test.gleam  brief_dev_codecs_test.gleam  prompts_dev_test.gleam  prompts_render_test.gleam  prompts_resume_test.gleam  prompts_review_test.gleam  prompts_scout_test.gleam  schema_drift_test.gleam  stacked_dev_test_ffi.erl  stage_schema_test.gleam
.meridian/workflows/stacked-dev/worker/: Cargo.toml
.meridian/workflows/stacked-dev/worker/src/: assemble.rs  dispatch.rs  enrich.rs  handlers.rs  lib.rs  main.rs  schemas.rs  shell.rs  types.rs
.meridian/workflows/stacked-dev/worker/tests/: handlers_shims.rs  wire_compat.rs
crates/haematite/: CHANGELOG.md  Cargo.toml
crates/haematite/benches/: multi_shard_scaling.rs  read_heavy.rs  replicated_append.rs  replicated_write.rs  single_shard_ops.rs
crates/haematite/examples/: active_active_failover.rs  event_store.rs  kv_basics.rs  persistence_recovery.rs  replicated_append.rs
crates/haematite/proptest-regressions/tree/: mutate_history_independence_tests.txt
crates/haematite/src/: db.rs  db_tests.rs  error.rs  ids.rs  lib.rs
crates/haematite/src/api/: error.rs  event_store.rs  event_store_tests.rs  kv.rs  mod.rs  types.rs
crates/haematite/src/branch/: checkout.rs  conflict.rs  fork.rs  handle.rs  handle_tests.rs  merge.rs  merge_tests.rs  mod.rs  persist.rs  prune.rs  registry.rs  snapshot.rs  snapshot_tests.rs
crates/haematite/src/db/: config.rs  error.rs  helpers.rs  lazy_root_spike_tests.rs  owner_stamp.rs  receiver.rs  startup.rs
crates/haematite/src/shard/: actor.rs  router.rs  router_tests.rs
crates/haematite/src/shard/actor/: coop_smoke.rs  errors.rs  handle.rs  liveness.rs  native.rs  scan.rs  startup.rs  stream_index.rs  stream_index_tests.rs  tests.rs
crates/haematite/src/store/: cache.rs  disk.rs  gc.rs  idb_backend.rs  indexeddb.rs  memory.rs  mod.rs  opfs.rs
crates/haematite/src/store/opfs/: browser.rs  frame.rs  mod.rs
crates/haematite/src/sync/: ballot.rs  cluster_members.rs  consistency.rs  consistency_tests.rs  endpoint.rs  endpoint_route_ack_tests.rs  handoff_merge.rs  handoff_merge_proptest.rs  handoff_merge_tests.rs  membership.rs  merge.rs  mod.rs  protocol.rs  pull.rs  push.rs  scheduler.rs  scheduler_tests.rs  topology.rs  transport_glue.rs
crates/haematite/src/sync/protocol/: error.rs  target.rs  tests.rs  wire.rs
crates/haematite/src/sync/scheduler/: error.rs
crates/haematite/src/sync_codec/: ballot.rs  error.rs  ids.rs  missing.rs  mod.rs  target.rs
crates/haematite/src/sync_codec/message/: election.rs  mod.rs  root.rs  transfer.rs  write.rs
crates/haematite/src/sync_codec/tests/: codec_election.rs  codec_write.rs  discovery.rs  mod.rs
crates/haematite/src/sync_codec/wire/: cursor.rs  decode.rs  decode_proptest.rs  encode.rs  mod.rs
crates/haematite/src/tree/: boundary.rs  cursor.rs  diff.rs  diff_tests.rs  mod.rs  mutate.rs  mutate_history_independence_tests.rs  node.rs
crates/haematite/src/ttl/: entry.rs  filter.rs  mod.rs  sweep.rs
crates/haematite/src/ttl/sweep/: mod.rs  recover.rs  tests.rs
crates/haematite/src/wal/: buffer.rs  durable.rs  durable_tests.rs  entry.rs  mod.rs  promise.rs  recovery.rs  recovery_persist_003_tests.rs  recovery_tests.rs
crates/haematite/src/wasm/: bindings.rs  detect.rs  mod.rs  runtime.rs  transport.rs
crates/haematite/tests/: commit_stamp_e2e.rs  concurrent_proposer_e2e.rs  core002.rs  core003.rs  disk_store.rs  dist_endpoint_e2e.rs  election_e2e.rs  handoff_merge_e2e.rs  lazy_shard_materialisation.rs  multi_reader_writer.rs  receiver_apply.rs  receiver_batch_apply.rs  receiver_fence_idempotency.rs  receiver_roundtrip_e2e.rs  replicated_append_e2e.rs  spike_distribution_transport.rs  spike_fencing.rs  spike_quorum.rs  ss0_partition_divergence_e2e.rs  three_node_split_brain_e2e.rs  wasm.rs  writer_coordinator_e2e.rs
docs/: ACTIVE-ACTIVE-2A-WRITE-ACK-DESIGN.md  ACTIVE-ACTIVE-STEP3-EPOCH-FENCE-DESIGN.md  CORE-007-NATIVE-MIGRATION-SPEC.md
docs/design/: DISPATCH-WAVES.md  ELASTIC-RESHARDING.md  decisions.json  roadmap.json
docs/design/api/: checklist.json  design.json  stories.json
docs/design/api/briefs/: API-001-input.json  API-001.json  API-002-input.json  API-002.json  API-003-input.json  API-003.json
docs/design/branching/: checklist.json  design.json  stories.json
docs/design/branching/briefs/: BRANCH-001-input.json  BRANCH-001.json  BRANCH-002-input.json  BRANCH-002.json  BRANCH-003-input.json  BRANCH-003-input.md  BRANCH-003.json  BRANCH-004-input.json  BRANCH-004.json
docs/design/core/: checklist.json  design.json  stories.json
docs/design/core/briefs/: CORE-001-input.json  CORE-001.json  CORE-002-input.json  CORE-002.json  CORE-003-input.json  CORE-003-input.md  CORE-003.json  CORE-004-input.json  CORE-004.json  CORE-005-input.json  CORE-005-input.md  CORE-005.json  CORE-006-input.json  CORE-006.json  CORE-007-input.json  CORE-007.json  CORE-008-input.json  CORE-008.json  CORE-009-input.json  CORE-009.json  PERF-001-input.json  PERF-002-input.json  PERF-003-input.json
docs/design/distribution/: checklist.json  design.json  stories.json
docs/design/persistence/: checklist.json  design.json  stories.json
docs/design/wasm/: checklist.json  design.json  stories.json
scripts/: check.sh  render-input.py  wasm-size-check.sh
(+41 files in other folders)
