[package]
name = "haematite"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Content-addressed, branchable, actor-native storage engine"
repository = "https://github.com/tomWhiting/haematite"
authors = ["Tom Whiting <tom@ablative.com.au>"]

[dependencies]
blake3 = "1"
crc32fast = "1"
log = "0.4"
zstd = "0.13"
beamr = "0.7.0"
lru = "0.12"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
cast_possible_truncation = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
