[package]
name = "haematite"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Content-addressed, branchable, actor-native storage engine"
repository = "https://github.com/tomWhiting/haematite"
authors = ["Tom Whiting <tom@ablative.com.au>"]

[dependencies]
blake3 = "1"
crc32fast = "1"
log = "0.4"
zstd = "0.13"
beamr = "0.9.0"
lru = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "net"] }
dashmap = "6.2.1"


[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
criterion = "0.5"

[[bench]]
name = "single_shard_ops"
harness = false

[[bench]]
name = "multi_shard_scaling"
harness = false

[[bench]]
name = "replicated_write"
harness = false

[[bench]]
name = "replicated_append"
harness = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
cast_possible_truncation = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
