[package]
name = "stacked-dev-worker"
version = "0.1.0"
edition = "2024"
publish = false
description = "Standalone activity worker serving the stacked-dev workflow family's eleven activities."

# Deliberately NOT a workspace member: this is the worker a deployment would
# write against the published SDK, so it consumes `aion-worker` from
# crates.io exactly like the saga template's worker does.
[workspace]

# Out-of-workspace crates cannot inherit the repo's `[workspace.lints]`, so
# the same strict set is pinned here verbatim — this crate is held to the
# identical clippy/rustc bar as every workspace member.
[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"

[dependencies]
aion-worker = "0.6.0"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
